--- a/servicio/Diseño-Merchandising.html
+++ b/servicio/Diseño-Merchandising.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <title>Q'ero Chela - Servicios</title>
-    <link rel="preload" href="css/servicios_css.css" as="style">
-    <link rel="stylesheet" href="css/servicios_css.css">
+    <title>Diseño de Merchandising</title>
+    <link rel="preload" href="style/merchandising_css.css" as="style">
+    <link rel="stylesheet" href="style/merchandising_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
-    <link rel="website Icon" type="png" href="img/Logo-Web.png">
+    <link rel="website Icon" type="png" href="../img/Logo-Web.png">
     <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script> 
 </head>
 <body>
@@ -20,8 +17,8 @@
         <nav class="grid column-header">
             <div class="flex title-logo">
                 <div class="center">
-                    <a href="index.html">
-                        <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                    <a href="../index.html">
+                        <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                     </a>
                 </div>
             </div>
@@ -41,131 +38,78 @@
                         </div>
                     </li>    
                     <li class="center burger-center">
-                        <a href="productos.html">Productos</a>
+                        <a href="../productos.html">Productos</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="servicios.html">Servicios</a>
+                        <a href="../servicios.html">Servicios</a>
                     </li>
                     <li class="center burger-center">
                         <!-- <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
                             Contactos
                         </a> -->
-                        <a href="taproom.html">
+                        <a href="../taproom.html">
                             Taproom
                         </a>
                     </li>
                     <li class="center burger-center">
-                        <a href="nosotros.html">Nosotros</a>
+                        <a href="../nosotros.html">Nosotros</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
 
-    <main id="servicios" class="servicios center">
-        <div class="title-servicios center">
-            <h2>servicios</h2>
+    <main id="merchandinsing">
+        <div class="merchandinsing">
+            <div class="merchandinsing-img">
+            </div>
+            <div class="mer-div center flex flex-column gapmer">
+                <div class="mer-title center-align">
+                    <h2>diseño de merchandising</h2>
+                </div>
+                <div class="mer-text center">
+                    <p class="center-align">Creamos tu logo, etiquetas y packaging con identidad propia, comunicando la esencia de tu marca con diseños únicos y funcionales.</p>
+                </div>
+                <div class="mer-button center">
+                    <button onclick='location.href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!"'>información</button>
+                </div>
+            </div>
         </div>
-        <div class="grid ser-column-2 center">
-            <div class="item center">
-                <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-1.jpg" alt="Asesoría e Implementación de Plantas Cerveceras">
-                    </div>
-                    <div class="ser-title">
-                        <h2>Asesoría e Implementación de Plantas</h2>
-                    </div>
-                    <div class="ser-text">
-                        <p>Te guiamos en cada paso para montar tu propia planta de producción artesanal.</p>
-                    </div>
-                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Asesoría%20e%20Implementación%20de%20Plantas%20Cerveceras!" class="center ser-enlace" target="_blank">
-                        información
-                    </a>
+
+        <div class="diseños flex flex-column center">
+            <div class="center gapdi">
+                <div class="diseños-title center-align">
+                    <h2>marcas con identidad</h2>
+                </div>
+                <div class="diseños-text center-align">
+                    <p>Diseños que cuentan historias, desde el logo hasta el empaque.</p>
                 </div>
             </div>
-            <div class="item center">
-                <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-2.jpg" alt="Instalación de Barras de Cerveza">
+            <div class="grid grid-column-diseño gapdi-2">
+                <div class="dis-img">
+                    <img src="img-serv/diseño-merchandising/img1.JPG" alt="Diseño Patrón Andino">
+                    <!-- <div>
                     </div>
-                    <div class="ser-title">
-                        <h2>Instalación de Barras de Cerveza</h2>
-                    </div>
-                    <div class="ser-text">
-                        <p>Lleva la experiencia cervecera a tu local o evento con una barra profesional.</p>
-                    </div>
-                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Instalación%20de%20Barras%20de%20Cerveza!" class="center ser-enlace" target="_blank">
-                        información
-                    </a>
+                    <div class="dis-text center">
+                        <p>Patrón Andino</p>
+                    </div> -->
                 </div>
-            </div>
-            <div class="item center">
-                <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-3.jpg" alt="Cerveza para Eventos en Botellas o Barril">
-                    </div>
-                    <div class="ser-title">
-                        <h2>Cerveza para Eventos en Botellas o Barril</h2>
-                    </div>
-                    <div class="ser-text">
-                        <p>Ideal para fiestas, celebraciones o reuniones especiales.</p>
-                    </div>
-                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" class="center ser-enlace" target="_blank">
-                        información
-                    </a>
+                <div class="dis-img"> 
+                    <img src="img-serv/diseño-merchandising/img2.jpeg" alt="Diseño Patrón Andino">
                 </div>
-            </div>
-            <div class="item center">
-                <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-4.jpg" alt="Maquila y Marca Blanca">
+                <div class="dis-img">
+                    <img src="img-serv/diseño-merchandising/img3.jpeg" alt="Diseño Patrón Andino">
+                </div class="dis-img">
+                <!-- <div class="dis-img">
+                    <div>
+                        <img src="img-serv/diseño-merchandising/img1.JPG" alt="Diseño Patrón Andino">
                     </div>
-                    <div class="ser-title">
-                        <h2>Maquila y Marca Blanca</h2>
+                    <div class="dis-text center">
+                        <div class="center">
+                            <p class="center">Patrón Andino</p>
+                        </div>
                     </div>
-                    <div class="ser-text">
-                        <p>Hacemos tu cerveza con tu marca o la nuestra.
-                            Incluye producción, embotellado y diseño.</p>
-                    </div>
-                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" class="center ser-enlace" target="_blank">
-                        información
-                    </a>
-                </div>
-            </div>
-            <div class="item center">
-                <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-5.jpg" alt="Cursos y Capacitaciones">
-                    </div>
-                    <div class="ser-title">
-                        <h2>Cursos y Capacitaciones</h2>
-                    </div>
-                    <div class="ser-text">
-                        <p>Formación práctica para aprender a hacer cerveza, ideal para emprendedores y aficionados.</p>
-                    </div>
-                    <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" class="center ser-enlace" target="_blank">
-                        información
-                    </a>
-                </div>
-            </div>
-            <div class="item center">
-                <div class="item-s flex flex-column gap-ser">
-                    <div class="ser-logo">
-                        <img src="img/servicios-img/servicio-6.png" alt="Diseño y Producción de Merchandising">
-                    </div>
-                    <div class="ser-title">
-                        <h2>Diseño y Producción de Merchandising</h2>
-                    </div>
-                    <div class="ser-text">
-                        <p>Creamos tu logo, etiquetas y packaging con identidad propia.</p>
-                    </div>
-                    <!-- <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!" class="center ser-enlace" target="_blank">
-                        información
-                    </a> -->
-                    <a href="servicio/Diseño-Merchandising.html" class="center ser-enlace">
-                        información
-                    </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </main>
@@ -184,15 +128,15 @@
                 </div>
             </div>
             <div class="img-footer">
-                <img src="img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
+                <img src="../img/Muestra-QeroChela.png" alt="Muestra Q'ero Chela">
             </div>
         </div>
         <div class="my-footer2 flex footer-column-2-2">
             <div class="flex flex-2"> 
                 <div class="flex title-logo">
                     <div class="center">
-                        <a href="index.html">
-                            <img src="img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
+                        <a href="../index.html">
+                            <img src="../img/inicio-img/logo-footer.png" alt="Logo Footer Q'ero Chela">
                         </a>
                     </div>
                 </div>
@@ -202,7 +146,7 @@
                     </div>
                     <div class="center">
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!">
-                            +51 935 287 218 
+                           +51 935 287 218 
                         </a>
                     </div>
                 </div>
@@ -238,14 +182,14 @@
                 <div class="flex flex-2">
                     <h2>Empresa</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="nosotros.html">Nosotros</a>
-                        <a href="taproom.html">Taproom</a>
+                        <a href="../nosotros.html">Nosotros</a>
+                        <a href="../taproom.html">Taproom</a>
                     </div>
                 </div>
                 <div class="flex flex-2">
                     <h2>Productos</h2>
                     <div class="flex flex-2 gap-footer-3">
-                        <a href="index.html">Q'ero Chela</a>
+                        <a href="../index.html">Q'ero Chela</a>
                         <a href="https://tantrica.pe/" target="_blank">Tantrica</a>
                     </div>
                 </div>
@@ -257,7 +201,7 @@
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" target="_blank">Cerveza para Eventos</a>
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" target="_blank">Maquila y Marca Blanca</a>
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" target="_blank">Cursos Especializados</a>
-                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!" target="_blank">Diseño de Merchandising</a>
+                        <a href="#merchandinsing">Diseño de Merchandising</a>
                     </div>
                 </div>
             </div>
