--- a/taproom.html
+++ b/taproom.html
@@ -44,15 +44,18 @@
                         <a href="productos.html">Productos</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="center burger-center">
                         <a href="servicios.html">Servicios</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
+                        <!-- <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
                             Contactos
+                        </a> -->
+                        <a href="taproom.html">
+                            Taproom
                         </a>
+                    </li>
+                    <li class="center burger-center">
+                        <a href="nosotros.html">Nosotros</a>
                     </li>
                 </ul>
             </div>
