--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -44,15 +44,15 @@
                         <a href="../productos.html">Productos</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="../nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="center burger-center">
                         <a href="../servicios.html">Servicios</a>
                     </li>
                     <li class="center burger-center">
-                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
-                            Contactos
+                        <a href="../taproom.html">
+                            Taproom
                         </a>
+                    </li>
+                    <li class="center burger-center">
+                        <a href="../nosotros.html">Nosotros</a>
                     </li>
                 </ul>
             </div>
@@ -252,7 +252,7 @@
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" target="_blank">Cerveza para Eventos</a>
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" target="_blank">Maquila y Marca Blanca</a>
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" target="_blank">Cursos Especializados</a>
-                        <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Diseño%20y%20Producción%20de%20Merchandising!" target="_blank">Diseño de Merchandising</a>
+                        <a href="../servicio/Diseño-Merchandising.html">Diseño de Merchandising</a>
                     </div>
                 </div>
             </div>
