--- a/servicio/Diseño-Merchandising.html
+++ b/servicio/Diseño-Merchandising.html
@@ -32,7 +32,7 @@
                         <div class="flex"> 
                             <div class="center logo-burger-img">
                                 <a href="index.html">
-                                    <img src="img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
+                                    <img src="../img/logo-Qero-Chela.png" alt="Logo Q'ero Chela">
                                 </a>
                             </div>
                         </div>
@@ -44,9 +44,6 @@
                         <a href="../servicios.html">Servicios</a>
                     </li>
                     <li class="center burger-center">
-                        <!-- <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20producto!" target="_blank">
-                            Contactos
-                        </a> -->
                         <a href="../taproom.html">
                             Taproom
                         </a>
@@ -86,30 +83,15 @@
                 </div>
             </div>
             <div class="grid grid-column-diseño gapdi-2">
-                <div class="dis-img">
+                <div class="dis-img center">
                     <img src="img-serv/diseño-merchandising/img1.JPG" alt="Diseño Patrón Andino">
-                    <!-- <div>
-                    </div>
-                    <div class="dis-text center">
-                        <p>Patrón Andino</p>
-                    </div> -->
                 </div>
-                <div class="dis-img"> 
+                <div class="dis-img center"> 
                     <img src="img-serv/diseño-merchandising/img2.jpeg" alt="Diseño Patrón Andino">
                 </div>
-                <div class="dis-img">
+                <div class="dis-img center">
                     <img src="img-serv/diseño-merchandising/img3.jpeg" alt="Diseño Patrón Andino">
-                </div class="dis-img">
-                <!-- <div class="dis-img">
-                    <div>
-                        <img src="img-serv/diseño-merchandising/img1.JPG" alt="Diseño Patrón Andino">
-                    </div>
-                    <div class="dis-text center">
-                        <div class="center">
-                            <p class="center">Patrón Andino</p>
-                        </div>
-                    </div>
-                </div> -->
+                </div">
             </div>
         </div>
     </main>
