update taproom y merchandising

--- a/taproom.html
+++ b/taproom.html
@@ -59,7 +59,6 @@
         </nav>
     </header>
 
-
     <main id="taproom">
         <div class="taproom center">
             <div class="taproom-img">
@@ -84,15 +83,20 @@
                 <p>Un Taproom es el espacio donde una cervecería artesanal ofrece sus cervezas directamente al público, servidas frescas y recién salidas del barril. Es el lugar ideal para conocer los productos, probar distintas variedades y vivir la experiencia cervecera en su forma más auténtica, rodeado del ambiente y la esencia de la marca.</p>
             </div>
         </div>
-        <div class="video-taproom center flex flex-column">
+        <div class="video-taproom center flex flex-column center">
             <div class="video-title center-align">
                 <h2>q'ero chela te espera</h2>
             </div>
-            <div class="cuadro-video center">
-                <div class="cuadro-video-img center">
-                    <a href="https://web.facebook.com/share/r/19FCsCZmnX/">
-                        <img src="img/taproom-img/boton-Play-Q'eroChela.png" alt="Botón Play Q'ero Chela" class="pulsate-fwd">
-                    </a>
+            <div class="center">
+                <div class="cuadro-video">
+                    <div class="cuadro-video-img center">
+                        <img src="img/taproom-img/Fondo-Video.jpeg" alt="Fondo Video">
+                    </div>
+                    <div class="center cuadro-enlace">
+                        <a href="https://web.facebook.com/share/r/19FCsCZmnX/">
+                            <img src="img/taproom-img/boton-Play-Q'eroChela.png" alt="Botón Play Q'ero Chela" class="pulsate-fwd">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
