--- a/servicios.html
+++ b/servicios.html
@@ -70,7 +70,7 @@
                         <img src="img/servicios-img/servicio-1.jpg" alt="Asesoría e Implementación de Plantas Cerveceras">
                     </div>
                     <div class="ser-title">
-                        <h2>Asesoría e Implementación de Plantas</h2>
+                        <h2>Implementación de Plantas</h2>
                     </div>
                     <div class="ser-text">
                         <p>Te guiamos en cada paso para montar tu propia planta de producción artesanal.</p>
@@ -102,10 +102,10 @@
                         <img src="img/servicios-img/servicio-3.jpg" alt="Cerveza para Eventos en Botellas o Barril">
                     </div>
                     <div class="ser-title">
-                        <h2>Cerveza para Eventos en Botellas o Barril</h2>
+                        <h2>Cerveza en Botellas o Barril</h2>
                     </div>
                     <div class="ser-text">
-                        <p>Ideal para fiestas, celebraciones o reuniones especiales.</p>
+                        <p>Ideal para fiestas, celebraciones, momentos o reuniones especiales.</p>
                     </div>
                     <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" class="center ser-enlace" target="_blank">
                         información
@@ -121,8 +121,7 @@
                         <h2>Maquila y Marca Blanca</h2>
                     </div>
                     <div class="ser-text">
-                        <p>Hacemos tu cerveza con tu marca o la nuestra.
-                            Incluye producción, embotellado y diseño.</p>
+                        <p>Cerveza con tu marca o la nuestra, con producción, embotellado y diseño.</p>
                     </div>
                     <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" class="center ser-enlace" target="_blank">
                         información
@@ -138,7 +137,7 @@
                         <h2>Cursos y Capacitaciones</h2>
                     </div>
                     <div class="ser-text">
-                        <p>Formación práctica para aprender a hacer cerveza, ideal para emprendedores y aficionados.</p>
+                        <p>Formación práctica para hacer cerveza, ideal para emprender o como hobby.</p>
                     </div>
                     <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" class="center ser-enlace" target="_blank">
                         información
@@ -151,10 +150,10 @@
                         <img src="img/servicios-img/servicio-6.png" alt="Diseño y Producción de Merchandising">
                     </div>
                     <div class="ser-title">
-                        <h2>Diseño y Producción de Merchandising</h2>
+                        <h2>Diseño y Producción de Merch</h2>
                     </div>
                     <div class="ser-text">
-                        <p>Creamos tu logo, etiquetas y packaging con identidad propia.</p>
+                        <p>Creamos tu logo, etiquetas y packaging con identidad propia y estilo único.</p>
                     </div>
                     <a href="servicio/Diseño-Merchandising.html" class="center ser-enlace">
                         información
