--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -54,6 +54,9 @@
                     <li class="center burger-center">
                         <a href="../nosotros.html">Nosotros</a>
                     </li>
+                    <li class="center burger-center">
+                        <a href="https://drive.google.com/file/d/13l0jRu1-jTnoHsqHDHLKZHBEltW0Ig9d/view?usp=sharing" target="_blank">Brochure</a>
+                    </li>
                 </ul>
             </div>
         </nav>
