--- a/nosotros.html
+++ b/nosotros.html
@@ -284,7 +284,7 @@
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cerveza%20para%20Eventos%20en%20Botellas%20o%20Barril!" target="_blank">Cerveza para Eventos</a>
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Maquila%20y%20Marca%20Blanca!" target="_blank">Maquila y Marca Blanca</a>
                         <a href="https://wa.me/51935287218/?text=¡Hola,%20estoy%20interesado%20en%20el%20Servicio%20de%20Cursos%20y%20Capacitaciones!" target="_blank">Cursos Especializados</a>
-                        <a href="servicio/Diseño-Merchandising.html">Diseño de Merchandising</a>
+                        <a href="servicio/Merchandising.html">Diseño de Merchandising</a>
                     </div>
                 </div>
             </div>
