--- a/servicio/Merchandising.html
+++ b/servicio/Merchandising.html
@@ -87,13 +87,13 @@
             </div>
             <div class="grid grid-column-diseño gapdi-2">
                 <div class="dis-img center">
-                    <img src="img-serv/diseño-merchandising/img1.JPG" alt="Diseño Patrón Andino">
+                    <img src="img-serv/img1.JPG" alt="Diseño Patrón Andino">
                 </div>
                 <div class="dis-img center"> 
-                    <img src="img-serv/diseño-merchandising/img2.jpeg" alt="Diseño Patrón Andino">
+                    <img src="img-serv/img2.jpeg" alt="Diseño Patrón Andino">
                 </div>
                 <div class="dis-img center">
-                    <img src="img-serv/diseño-merchandising/img3.jpeg" alt="Diseño Patrón Andino">
+                    <img src="img-serv/img3.jpeg" alt="Diseño Patrón Andino">
                 </div">
             </div>
         </div>
