--- a/servicio/Merchandising.html
+++ b/servicio/Merchandising.html
@@ -87,14 +87,14 @@
             </div>
             <div class="grid grid-column-diseño gapdi-2">
                 <div class="dis-img center">
-                    <img src="img-serv/img1.JPG" alt="Diseño Patrón Andino">
+                    <img src="img-serv/img1.JPG" alt="Botella Patrón Andino">
                 </div>
                 <div class="dis-img center"> 
-                    <img src="img-serv/img2.jpeg" alt="Diseño Patrón Andino">
+                    <img src="img-serv/img2.jpeg" alt="Botella Patrón Andino">
                 </div>
                 <div class="dis-img center">
-                    <img src="img-serv/img3.jpeg" alt="Diseño Patrón Andino">
-                </div">
+                    <img src="img-serv/img3.png" alt="Botella Patrón Andino">
+                </div>
             </div>
         </div>
     </main>
