--- a/servicio/Merchandising.html
+++ b/servicio/Merchandising.html
@@ -90,10 +90,10 @@
                     <img src="img-serv/img1.JPG" alt="Botella Patrón Andino">
                 </div>
                 <div class="dis-img center"> 
-                    <img src="img-serv/img2.jpeg" alt="Botella Patrón Andino">
+                    <img src="img-serv/img2.jpg" alt="Botella Patrón Andino">
                 </div>
                 <div class="dis-img center">
-                    <img src="img-serv/img3.png" alt="Botella Patrón Andino">
+                    <img src="img-serv/img3.jpg" alt="Botella Patrón Andino">
                 </div>
             </div>
         </div>
