--- a/taproom.html
+++ b/taproom.html
@@ -65,6 +65,7 @@
     <main id="taproom">
         <div class="taproom center">
             <div class="taproom-img">
+                <img src="img/taproom-img/taproom-Principal.png" alt="Fondo Templo Q'ero Chela">
             </div>
             <div class="my-taproom center gappx">
                 <div class="taproom-title center-align">
@@ -78,19 +79,26 @@
                 </div>
             </div>
         </div>
-        <div class="taproom-what flex flex-column center gappx2">
-            <div class="center-align taproom-what-title">
-                <h2>¿que es un taproom?</h2>
-            </div>
-            <div class="center-align taproom-what-text">
-                <p>Un Taproom es el espacio donde una cervecería artesanal ofrece sus cervezas directamente al público, servidas frescas y recién salidas del barril. Es el lugar ideal para conocer los productos, probar distintas variedades y vivir la experiencia cervecera en su forma más auténtica, rodeado del ambiente y la esencia de la marca.</p>
+        <div class="taproom-what center gappx2">
+            <div class="flex flex-column-taproom-what gappx3">
+                <div class="taproom-what-info center">
+                    <div class="center-left taproom-what-title">
+                       <img src="img/taproom-img/taproom-Pregunta.png" alt="Imagen ¿Que es un Taproom?">
+                    </div>
+                    <div class="center-align taproom-what-text">
+                        <p>Un Taproom es el espacio donde una cervecería artesanal ofrece sus cervezas directamente al público, servidas frescas y recién salidas del barril. Es el lugar ideal para conocer los productos, probar distintas variedades y vivir la experiencia cervecera en su forma más auténtica, rodeado del ambiente y la esencia de la marca.</p>
+                    </div>
+                </div>
+                <div class="taproom-what-img">
+                    <img src="img/taproom-img/taproom-Fotos.png" alt="Imagenes Producto y Templo">
+                </div>
             </div>
         </div>
         <div class="video-taproom center flex flex-column center">
-            <div class="video-title center-align">
-                <h2>q'ero chela te espera</h2>
-            </div>
             <div class="center">
+                <div class="fondo">
+                    <img src="img/taproom-img/taproom-Secundario.png" alt="Fondo Video Taproom">
+                </div>
                 <div class="cuadro-video">
                     <div class="cuadro-video-img center">
                         <img src="img/taproom-img/Fondo-Video.jpeg" alt="Fondo Video">
