--- a/taproom.html
+++ b/taproom.html
@@ -80,6 +80,9 @@
             </div>
         </div>
         <div class="taproom-what center gappx2">
+            <div class="item-lu">
+                <img src="img/taproom-img/taproomFGRT.png" alt="">
+            </div>
             <div class="flex flex-column-taproom-what gappx3">
                 <div class="taproom-what-info center">
                     <div class="center-left taproom-what-title">
@@ -92,6 +95,9 @@
                 <div class="taproom-what-img">
                     <img src="img/taproom-img/taproom-Fotos.png" alt="Imagenes Producto y Templo">
                 </div>
+            </div>
+            <div class="item-lu-2">
+                <img src="img/taproom-img/taproomJTYYIT.png" alt="">
             </div>
         </div>
         <div class="video-taproom center flex flex-column center">
