--- a/taproom.html
+++ b/taproom.html
@@ -9,11 +9,12 @@
     <title>Q'ero Chela - Taproom</title>
     <link rel="preload" href="css/taproom_css.css" as="style">
     <link rel="stylesheet" href="css/taproom_css.css">
+    <link href="https://fonts.cdnfonts.com/css/bilcase-demo" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gidole&display=swap" rel="stylesheet">
     <link rel="website Icon" type="png" href="img/Logo-Web.png">
-    <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>   
+    <script src="https://kit.fontawesome.com/8bc6f858e7.js" crossorigin="anonymous"></script>
 </head>
 <body>   
     <header>
@@ -81,7 +82,7 @@
         </div>
         <div class="taproom-what center gappx2">
             <div class="item-lu">
-                <img src="img/taproom-img/taproomFGRT.png" alt="">
+                <img src="img/taproom-img/Lupulos-1.png" alt="Imagenes de Lupulos">
             </div>
             <div class="flex flex-column-taproom-what gappx3">
                 <div class="taproom-what-info center">
@@ -97,7 +98,7 @@
                 </div>
             </div>
             <div class="item-lu-2">
-                <img src="img/taproom-img/taproomJTYYIT.png" alt="">
+                <img src="img/taproom-img/Lupulos-2.png" alt="Imagenes de Lupulos">
             </div>
         </div>
         <div class="video-taproom center flex flex-column center">
