--- a/producto/qerochela.html
+++ b/producto/qerochela.html
@@ -76,11 +76,11 @@
                         <p>Es una cerveza fácil de beber con un suave dulzor inicial a caramelo y un toque de quedad tostada al final generado por sus 4 diferentes tipos de malta.</p>
                     </div>
                     <div class="producto-formato grid">
-                        <button id="bt1" class="button producto-opacity">unidad</button>
-                        <button id="bt2" class="button">6 unid.</button>
-                        <button id="bt3" class="button">pack 24</button>
-                        <button id="bt4" class="button">30 l</button>
-                        <button id="bt5" class="button">50 l</button>
+                        <button id="bt1" class="button producto-opacity" onclick="location.href='#aborigen'">unidad</button>
+                        <button id="bt2" class="button" onclick="location.href='#aborigen'">6 unid.</button>
+                        <button id="bt3" class="button" onclick="location.href='#aborigen'">pack 24</button>
+                        <button id="bt4" class="button" onclick="location.href='#aborigen'">30 l</button>
+                        <button id="bt5" class="button" onclick="location.href='#aborigen'">50 l</button>
                     </div>
                     <div class="producto-precio">
                         <span id="precio">
