--- a/producto/qerochela-luna-miel.html
+++ b/producto/qerochela-luna-miel.html
@@ -76,11 +76,11 @@
                         <p>Es una cerveza artesanal elaborada con miel de origen natural. Cada sorbo te envuelve en una experiencia que combina suavidad y dulzura.</p>
                     </div>
                     <div class="producto-formato grid">
-                        <button id="bt1" class="button producto-opacity">unidad</button>
-                        <button id="bt2" class="button">6 unid.</button>
-                        <button id="bt3" class="button">pack 24</button>
-                        <button id="bt4" class="button">30 l</button>
-                        <button id="bt5" class="button">50 l</button>
+                        <button id="bt1" class="button producto-opacity"  onclick="location.href='#luna-miel'">unidad</button>
+                        <button id="bt2" class="button" onclick="location.href='#luna-miel'">6 unid.</button>
+                        <button id="bt3" class="button" onclick="location.href='#luna-miel'">pack 24</button>
+                        <button id="bt4" class="button" onclick="location.href='#luna-miel'">30 l</button>
+                        <button id="bt5" class="button" onclick="location.href='#luna-miel'">50 l</button>
                     </div>
                     <div class="producto-precio">
                         <span id="precio">
