--- a/verificador.html
+++ b/verificador.html
@@ -11,8 +11,13 @@
         <div class="center">
             <h2>¡Bienvenido a Q'ero Chela!</h2>
         </div>
-
-        <div class="flex gap1-3rem">
+        <div>
+            <p>¿Eres mayor de edad?</p>
+        </div>
+        <div class="flex flex-column gap1-3rem">
+            <div>
+                <p>Selecciona una opción para continuar:</p>
+            </div>
             <div>
                 <button id="btn">
                     Si, soy mayor de Edad
@@ -25,7 +30,8 @@
             </div>
         </div>
     </main>
-
+<!--
     <script src="js/verificador.js"></script>
+-->
 </body>
 </html>
